--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-    "nick":"botlord",
+    "nick":"chonebot",
     "realname":"#linux-cn opbot",
     "host":"irc.freenode.net",
     "port":6697,
