update action.py     test aio echo
botlord.py
    code+

--- a/config.json
+++ b/config.json
@@ -8,8 +8,7 @@
     },
     "channel":"#linux-cn",
     "key":false,
-    "master":[
-        "unaffiliated/quininer"
-    ],
-    "operator":[]
+    "master":"unaffiliated/quininer",
+    "operator":[],
+    "debug":false
 }
